--- a/WorkHistory.html
+++ b/WorkHistory.html
@@ -12,6 +12,28 @@
             <li><a href="Misc.html">Misc</a></li>
         </menu>
     </nav>
-    <section></section>
+    <section>
+        <section>
+            <p><h4>A Carver Company<br>
+                Project Manager<br>
+             March 2019 - Present</h4>
+          </p>
+          <p>Fielding inquires about possible jobs. Creating invoices and collecting payment. Setting up third party vendors for sites i.e., dumpsters, plumbing, electrical etc. Pulling permits when necessary. Maintaining proper insurance and workman's comp certificates. </p><br>
+        </section>
+        <section>
+            <p><h4>Roy Meat Service<br>
+               Assistant Manager<br>
+               April 2017 - September 2018</h4>
+            </p>
+            <p>Tracking and maintaining store inventory, along with occasional stocking. Responsible for meeting with vendors to establish purchase orders and delivery routes. Reconciling QuickBooks with bank statements for quarterly taxes. Keeping current on food safety measures. Setting schedule for five employees and payroll through ADP.</p><br>
+        </section>     
+        <section> 
+            <p><h4>Benefit Communications Inc.<br>
+                   Enrollment Counselor<br>
+             October 2015 - April 2017</h4>
+            </p>
+            <p>Accurately enrolling employees in benefit programs of their choice and ensuring the system accurately reflects elections. Providing detailed information regarding core benefits i.e., coinsurances, deductibles, in/out network expense and differences. Enrolling new and existing employees in 401k. Explaining company match and contributions. Explaining short term and long-term disability options available to hourly and salaried workers. Reconciling daily reporting activity logs and Web results.</p><br>
+        </section>          
+    </section>
     <footer><center><h5>WorkHistory</h5></center></footer>
 </body>
